# lanco-discord-bot

./: .dockerignore  .env.default  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  migrate.py  pyproject.toml  pytest.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: black.yml  deploy.yml
app/: db.py  main.py  run.py
app/cogs/: lancocog.py
app/cogs/AIDetection/: AIDetection.py  README.md  __init__.py
app/cogs/CoinFlip/: CoinFlip.py  README.md  __init__.py
app/cogs/JeffVacation/: JeffVacation.py  README.md  __init__.py
app/cogs/JiraHate/: JiraHate.py  README.md  __init__.py
app/cogs/PasswordGenerator/: PasswordGenerator.py  README.md  __init__.py
app/cogs/ScheduledPost/: README.md  ScheduledPost.py  __init__.py  models.py
app/cogs/TechLanc/: README.md  TechLanc.py  __init__.py  models.py
app/cogs/TruthSocial/: README.md  TruthSocial.py  __init__.py  models.py
app/cogs/adhdchannel/: README.md  __init__.py  adhdchannel.py
app/cogs/admin/: README.md  __init__.py  admin.py
app/cogs/aiprompts/: README.md  __init__.py  aiprompts.py  models.py
app/cogs/aitools/: README.md  aitools.py
app/cogs/anime/: README.md  __init__.py  anime.py
app/cogs/animetoday/: README.md  __init__.py  animetoday.py  models.py
app/cogs/astrology/: README.md  __init__.py  astrology.py
app/cogs/autoreact/: README.md  __init__.py  autoreact.py  models.py
app/cogs/autoresponse/: README.md  __init__.py  autoresponse.py  models.py
app/cogs/barhopper/: README.md  __init__.py  barhopper.py  models.py
app/cogs/birthday/: README.md  __init__.py  birthday.py  models.py
app/cogs/bot/: README.md  __init__.py  bot.py
app/cogs/busfinder/: busfinder.py
app/cogs/captcha/: __init__.py  captcha.py  captcha_gen.py  models.py  session.py
app/cogs/chatbot/: README.md  __init__.py  chatbot.py
app/cogs/chatrelay/: README.md  __init__.py  chatrelay.py
app/cogs/commands/: README.md  __init__.py  commands.py  models.py
app/cogs/common/: embedfixcog.py
app/cogs/conversions/: README.md  __init__.py  conversions.py
app/cogs/counter/: README.md  __init__.py  counter.py  models.py
app/cogs/dadjoke/: README.md  __init__.py  dadjoke.py  models.py
app/cogs/databasebackupper/: databasebackupper.py
app/cogs/demo/: README.md  __init__.py  demo.py
app/cogs/describe/: README.md  __init__.py  describe.py
app/cogs/emotetools/: README.md  __init__.py  emotetools.py
app/cogs/everbridge/: README.md  __init__.py  everbridge.py  models.py
app/cogs/facebookembed/: README.md  __init__.py  facebookembed.py  models.py
app/cogs/facts/: README.md  __init__.py  facts.py  models.py
app/cogs/filefixer/: README.md  __init__.py  filefixer.py  models.py
app/cogs/fishbowl/: README.md  __init__.py  fishbowl.py  models.py
app/cogs/fixit/: README.md  __init__.py  fixit.py  (+1 more)
app/utils/: ai_utils.py  apm.py  channel_lock.py  command_utils.py  common.py  config.py  date_utils.py  db_backup.py  dist_utils.py  emoji_uploader.py  file_downloader.py  image_utils.py  markdown_utils.py  message_utils.py  network_utils.py  progressbar_generator.py  tracked_message.py  viruscheck.py  voice_message.py
dashboard/: .env.example  app.py  requirements.txt
dashboard/templates/: base.html  dashboard.html  index.html  logs.html  status.html
migrations/: 001_change_instafix_table_name.py  002_change_twitterfix_table_name.py  003_change_tiktokfix_table_name.py  004_add_incidents_client_options.py  005_custom_commands_channel_id.py  006_pdf_preview_guild_config.py  007_fix_autoresponse_table.py  008_custom_commands_ai_meta.py  009_custom_commands_cooldown_fix.py  010_reddit_feed_post_tracking.py  011_add_bot_metrics.py  011_guild_config_prefix.py  012_add_bot_guilds.py  012_tech_lanc_config_schedule.py  012_tech_lanc_guild_config_extras.py  013_geoguesser_updates.py  013_tech_lanc_allowed_posters.py  014_round_game_results.py  015_guild_config_unique_guild_id.py  016_embedfix_handler_id.py  017_paywall_bypass_handler_id.py  018_paywall_pattern.py
tests/: conftest.py  test_bot.py
tools/: cog.py  cog_create.py  cog_delete.py  cog_gen.py  cog_report.py
tools/templates/: cog_template.py  readme_template.md
(+196 files in other folders)
