[tool.poetry]
name = "lanco-bot"
version = "0.1.0"
description = ""
authors = ["Nate Shoffner <nate.shoffner@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"
lcwc = "0.12.3"
pydantic = "^2.4.2"
peewee = "^3.17.0"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
pytz = "^2023.3.post1"
toml = "^0.10.2"
googlemaps = "^4.10.0"
confusables = "^1.2.0"
nest-asyncio = "^1.5.8"
asyncpraw = "*"
zalgo-text = "^0.6"
cachetools = "^5.3.2"
pyowm = "^3.3.0"
opencage = "^2.4.0"
spotipy = "^2.23.0"
watchfiles = "^0.21.0"
pymupdf = "^1.24.2"
vt-py = "^0.18.2"
openai = "1.33.0"
bs4 = "^0.0.2"
emoji = "^2.13.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
black = "^24.3.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
